--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+@import url("../styles/style.css");
 html,
 body {
   padding: 0;
@@ -9,12 +9,6 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
 * {
   box-sizing: border-box;
 }
@@ -27,4 +21,11 @@ a {
     color: white;
     background: black;
   }
+}
+p {
+  font-size: 16px;
+  line-height: 30px;
+  color: #555;
+  margin: 0;
+  font-weight: 400;
 }
