--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1172,6 +1172,9 @@
   .mobile-nav {
     width: 50%;
   }
+  .section-discover-menu .nav-pills .nav-link.active:before {
+    width: 89%;
+}
   .section-discover-menu .nav-pills .nav-link.active,
   .section-discover-menu .nav-pills .show > .nav-link {
     width: 100px;
@@ -1179,16 +1182,16 @@
     font-size: 16px;
     padding: 0;
   }
-  .section-discover-menu .nav-pills .nav-link.active:before {
-    width: 86%;
-  }
   .section-discover-menu .nav-pills .nav-link {
     width: 100px;
     height: 68px;
+    align-items: center;
     font-size: 16px;
     border: 3px solid #e4e4e4;
     margin-left: 6px;
     padding: 0;
+    display: flex;
+    justify-content: center;
   }
   .section-featured {
     padding-top: 280px;
