--- a/styles/style.css
+++ b/styles/style.css
@@ -764,3 +764,111 @@ section.slider-hero {
   top: -16px;
   right: 22px;
 }
+
+.section-discover-menu .nav-link svg {
+  width: 70px;
+  fill: #f3274c;
+  display: block;
+  margin: auto;
+  margin-bottom: 15px;
+  height: auto;
+  margin-bottom: 5px;
+}
+.section-discover-menu .nav-link.active svg {
+  fill: #fff;
+}
+.section-discover-menu .nav-pills .nav-link.active,
+.section-discover-menu .nav-pills .show > .nav-link {
+  color: #fff;
+  padding: 30px;
+  width: 190px;
+  height: 190px;
+  background-color: #f3274c;
+  border-radius: 11px;
+  border: 0;
+  position: relative;
+}
+.section-discover-menu .nav-pills .nav-link.active:before {
+  position: absolute;
+  content: "";
+  width: 94%;
+  height: 40px;
+  background-color: #f3274c;
+  left: 6px;
+  bottom: -19px;
+  clip-path: polygon(49% 50%, 100% 50%, 50% 100%, 0% 50%);
+}
+.section-discover-menu .nav-pills .nav-link {
+  text-transform: capitalize;
+  background-color: #fff;
+  padding: 30px;
+  color: black;
+  width: 190px;
+  height: 190px;
+  border-radius: 11px;
+  border: 5px solid #e4e4e4;
+  font-size: 22px;
+  margin-left: 20px;
+  text-align: center;
+}
+.section-discover-menu .nav-pills .nav-link svg:hover {
+  transform: rotate3d(1, 1, 1, 360deg);
+}
+.section-discover-menu .nav.nav-pills {
+  justify-content: center;
+  margin-bottom: 60px;
+}
+/* 12. discover */
+.discover h4 {
+  font-size: 40px;
+  text-transform: capitalize;
+}
+.discover span {
+  font-size: 22px;
+}
+.discover h6 {
+  font-size: 22px;
+  padding-bottom: 5px;
+}
+.discover ul {
+  margin-top: 25px;
+}
+.discover li:not(:last-child) {
+  border-bottom: 1px dotted;
+  padding-bottom: 15px;
+  margin-bottom: 20px;
+}
+.discover li {
+  display: flex;
+  justify-content: space-between;
+}
+.discover-menu:before {
+  content: "";
+  width: 74%;
+  height: 100%;
+  background-color: #f5f8fd;
+  position: absolute;
+  z-index: 0;
+  right: 0;
+  border-radius: 30px;
+}
+.discover-menu {
+  position: relative;
+  padding: 10px 0px;
+  width: 94%;
+  margin: auto;
+}
+
+.heading-two {
+  text-align: center;
+  position: relative;
+}
+.heading-two .line {
+  width: 270px;
+  height: 12px;
+  background-color: #ffd40d;
+  border-radius: 26px;
+  margin: auto;
+  margin-bottom: 60px;
+  margin-top: 10px;
+}
