app component & new component & brand component

--- a/styles/style.css
+++ b/styles/style.css
@@ -99,6 +99,9 @@
   border-bottom: 1px solid #00000014;
   padding-bottom: 15px;
 }
+.no-bottom {
+  padding-bottom: 0;
+}
 .cart-popup ul li a:before {
   content: "";
   width: 25px;
@@ -263,11 +266,6 @@ button.close {
 button.button {
   border: 0;
 }
-footer {
-  background-size: cover;
-  background-position: center;
-  padding-top: 100px;
-}
 .footer-bootem {
   display: flex;
   align-items: center;
@@ -280,6 +278,9 @@ footer {
 footer {
   background-image: url(../public/img/footer.png);
   background-color: #f5f8fd;
+  background-size: cover;
+  background-position: center;
+  padding-top: 100px;
 }
 
 .cart-checkout a svg {
@@ -905,6 +906,157 @@ section.slider-hero {
   font-size: 32px;
 }
 
-.gap {
+section {
   padding: 120px 0;
+}
+
+.slider-hero {
+  padding: 0 !important;
+}
+
+.recent-news {
+  display: flex;
+  align-items: center;
+}
+.recent-news img {
+  border-radius: 20px;
+  margin-right: 40px;
+}
+/* 20. follow */
+.recent-news a span {
+  border-radius: 5px;
+  padding: 6px 10px;
+  background-color: #ffd40d;
+  display: inline-block;
+  color: black;
+}
+.recent-news h3 {
+  width: 80%;
+  padding-top: 15px;
+  padding-bottom: 20px;
+  position: relative;
+}
+.recent-news h6 {
+  color: #555;
+}
+.follow h2 {
+  font-size: 50px;
+  position: relative;
+}
+.follow {
+  padding-top: 140px;
+  padding-bottom: 203px;
+  text-align: center;
+  position: relative;
+  background-position: center;
+  background-size: cover;
+}
+.follow:before {
+  width: 100%;
+  height: 100%;
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-color: white;
+  opacity: 0.9;
+}
+.follow p {
+  position: relative;
+}
+.follow .instagram-icon {
+  width: 90px;
+  position: relative;
+  height: 90px;
+  font-size: 50px;
+  border-radius: 50%;
+  display: flex;
+  margin: auto;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  margin-bottom: 35px;
+  background-color: #f3274c;
+}
+
+.app-foods {
+  position: relative;
+}
+.app-foods:before {
+  position: absolute;
+  background-color: #f3274c;
+  content: "";
+  width: 900px;
+  height: 340px;
+  border-radius: 191px;
+  border-bottom-right-radius: 0;
+  border-top-right-radius: 0;
+  right: 0;
+  top: 30%;
+}
+.manage-your-img {
+  position: relative;
+}
+.download-from {
+  display: flex;
+  align-items: center;
+  padding: 20px 40px;
+  background-color: #f3274c;
+  border-radius: 12px;
+}
+.download-from svg {
+  font-size: 36px;
+  margin-right: 14px;
+}
+.download-from svg,
+.download-from h5,
+.download-from span {
+  color: white;
+}
+.download-from span {
+  text-transform: uppercase;
+  font-size: 12px;
+}
+.download-from.apple {
+  background-color: black;
+  margin-left: 20px;
+}
+/* 19. recent-news */
+.recent-news {
+  display: flex;
+  align-items: center;
+}
+.recent-news img {
+  border-radius: 20px;
+  margin-right: 40px;
+}
+
+.bol {
+  display: block;
+  width: 15px;
+  height: 15px;
+  border: 5px solid #ffd40d;
+  border-radius: 50%;
+  margin-right: 12px;
+}
+
+ul.higher-reach li {
+  font-size: 18px;
+  font-family: "Epilogue";
+  font-weight: 400;
+  color: #555;
+  display: flex;
+  align-items: center;
+  padding-bottom: 8px;
+}
+ul.higher-reach {
+  margin-top: 30px;
+}
+ul.higher-reach li {
+  font-size: 18px;
+  font-weight: 500;
+  color: #555;
+  display: flex;
+  align-items: center;
+  padding-bottom: 8px;
 }
