--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,4 +2,5 @@
 @tailwind components;
 @tailwind utilities;
 @import url("../styles/style.css");
+@import url("../styles/about.css");
 @import url("../styles/responsive.css");
