--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,4 +3,5 @@
 @tailwind utilities;
 @import url("../styles/style.css");
 @import url("../styles/about.css");
+@import url("../styles/reserve.css");
 @import url("../styles/responsive.css");
