--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,3 +5,4 @@
 @import url("../styles/about.css");
 @import url("../styles/reserve.css");
 @import url("../styles/responsive.css");
+@import url("../styles/paginate.css");
