--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,3 +6,4 @@
 @import url("../styles/reserve.css");
 @import url("../styles/responsive.css");
 @import url("../styles/paginate.css");
+@import url("../styles/product.details.css");
