--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,3 +7,4 @@
 @import url("../styles/responsive.css");
 @import url("../styles/paginate.css");
 @import url("../styles/product.details.css");
+@import url("../styles/cart.css");
