--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -601,7 +601,7 @@
     margin-bottom: 60px;
   }
   table.shop_table_responsive tr {
-    padding: 0 20px;
+    padding: 0 20px !important;
   }
   .bar-menu i {
     margin-right: 0;
