--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,3 +8,4 @@
 @import url("../styles/paginate.css");
 @import url("../styles/product.details.css");
 @import url("../styles/cart.css");
+@import url("../styles/checkout.css");
