--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,3 +9,4 @@
 @import url("../styles/product.details.css");
 @import url("../styles/cart.css");
 @import url("../styles/checkout.css");
+@import url("../styles/news.css");
