--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,3 +10,4 @@
 @import url("../styles/cart.css");
 @import url("../styles/checkout.css");
 @import url("../styles/news.css");
+@import url("../styles/contact.css");
