--- a/styles/paginate.css
+++ b/styles/paginate.css
@@ -1,4 +1,3 @@
-
 .pagination {
     display: flex;
     margin-top: 10px;
@@ -9,17 +8,20 @@
     margin-left: 15px;
     border-radius: 20px;
 }
+
 .pagination li {
     padding: 20px;
     height: 70px;
-    width: 70px;
+    width: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
 .pagination li.prev {
     width: 100px;
 }
+
 .pagination li a {
     font-size: 16px;
     border-right: 1px solid #b7b7b7;
@@ -27,33 +29,40 @@
     line-height: 15px;
 }
 
-.pagination li.prev a,.pagination li.next a{
-    border-right: 0 ;
+.pagination li.prev a,
+.pagination li.next a {
+    border-right: 0;
     padding-right: 0;
 }
+
 .pagination li.prev {
     width: 70px;
     background-color: black;
     border-radius: 15px;
 }
-.pagination li.prev i{
-   color: white;
-}
-.pagination li.next {
-    position: absolute;
-    background-color: black;
-    border-radius: 15px;
-    right: -15px;
-}
-.pagination li.next {
-    position: absolute;
-    background-color: black;
-    border-radius: 15px;
-    right: -15px;
-}
-.pagination li.next i{
+
+.pagination li.prev i {
     color: white;
 }
+
+.pagination li.next {
+    position: absolute;
+    background-color: black;
+    border-radius: 15px;
+    right: -15px;
+}
+
+.pagination li.next {
+    position: absolute;
+    background-color: black;
+    border-radius: 15px;
+    right: -15px;
+}
+
+.pagination li.next i {
+    color: white;
+}
+
 .pagination li.prev {
     position: absolute;
     left: -15px;
