--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,3 +11,4 @@
 @import url("../styles/checkout.css");
 @import url("../styles/news.css");
 @import url("../styles/contact.css");
+@import url("../styles/login.css");
